Fix minor layout issues

--- a/style.css
+++ b/style.css
@@ -133,6 +133,8 @@ ul li:hover {
     background-size: 35%;
     background-repeat: no-repeat;
     background-position: 95% 50%;
+    transform-origin: top;
+    transform: scaleY(calc(100% + 2px));
 }
 
 
